sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: not found: value table
    var v=table(i)
          ^AlgInsertionSort:7: error: not found: value table
    while(table(j-1)>v){
          ^AlgInsertionSort:8: error: not found: value table
      table(j)=table(j-1)
      ^AlgInsertionSort:8: error: not found: value table
      table(j)=table(j-1)
               ^AlgInsertionSort:11: error: not found: value table
    table(j)=v
    ^