sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var n=getValueCount()-1
  for (i<-2 to n){
    var v=table(i)
    var j=i
    while(table(j-1)>v){
      table(j)=table(j-1)
      j=j-1
    }
    table(j)=v
    }
  }